--- a/HTML/css/designBruno.css
+++ b/HTML/css/designBruno.css
@@ -1,10 +1,10 @@
-   body {
-    background-color: #000000;
+ body {
+    background-color: #fdfbe0;
     font-family: 'Orbitron', sans-serif;
 }
 
 nav {
-    background-color: blue;
+    background-color: rgb(252, 251, 219);
 }
 
 .navegacao {
@@ -13,38 +13,41 @@ nav {
 
 .navegacao a {
     text-decoration: none;  /* Remove o sublinhado */
-    color: yellow;
+    color: rgb(0, 0, 0);
 }
 
 h1 {
-    color: yellow;
+    color: rgb(0, 0, 0);
     margin-left: 10px;
 }
 
 h2 {
-    color: yellow;
+    color: rgb(0, 0, 0);
     margin-left: 10px;
 }
 
 h3 {
-    color: yellow;
+    color: rgb(0, 0, 0);
     margin-left: 10px;
 }
 
 p {
-    color: #FFFFFF;
+    color: #444444;
     margin-left: 10px;
 }
 
 #sumario {
-    color: #FFFFFF;
+    color: #444444;
     margin-left: 10px;
 }
 
 li {
-    color: #FFFFFF;
+    color: #444444
 }
 
 footer {
-    color: orange;
+    color: rgb(255, 0, 0);
+}
+#Foto_do_Bruno{
+   width: 500px; 
 }
