--- a/MeuProjeto/MeuSite/MeuSite/templates/MeuSite/home.html
+++ b/MeuProjeto/MeuSite/MeuSite/templates/MeuSite/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,12 @@
     <ul>
         <li><a href="{% url 'curriculo:curriculo_spiff' %}">Currículo do Spiff</a></li>
         <li><a href="{% url 'curriculo:curriculo_spiff_v2' %}">Currículo responsivo do Spiff</a></li>
+    </ul>
+
+    <h2>Área de controle de acesso</h2>
+    <ul>
+        <li><a href="{% url 'login' %}">Login</a></li>
+        <li><form method='POST' action="{% url 'logout' %}">{% csrf_token %}<button type='submit'>Logout</button></form></li>
     </ul>
 </body>
 </html>
